# simpleworks

./: .gitignore  Cargo.toml  README.md  test.txt  test1.txt  test2.txt  test3.txt
src/: commit.rs  lib.rs  main.rs
src/fields/: serialization.rs
src/gadgets/: mod.rs
src/hash/: mod.rs
src/schnorr_signature/: blake2s.rs  mod.rs  parameters_var.rs  public_key_var.rs  schnorr.rs  schnorr_signature_verify_gadget.rs  signature_var.rs
