[package]
name = "simpleworks"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[profile.test]
opt-level = 3
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Arkworks dependencies
ark-ed25519 = { version = "0.4.0", default-features = false, features = ["r1cs"] }
#ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = ["r1cs"] }
ark-ff = { version = "^0.4.0", default-features = false }
#ark-ff-03 = { package = "ark-ff", version = "0.4.0", default-features = false}              # DELETE LATER
ark-ec = { version = "^0.4.0", default-features = false }
#ark-ec-04 = { package = "ark-ec", version = "^0.4.2", default-features = false }
ark-ed-on-bls12-377 = { version = "^0.4.0", features = ["r1cs"] }
ark-bls12-377 = { version = "^0.4.0", default-features = false, features = ["curve"] }
#ark-ed-on-bn254 = { version = "^0.4.0", features = ["r1cs"] }
#ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
ark-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false  }
ark-poly = { version = "^0.4.0", default-features = false  }
ark-poly-commit = { version = "^0.4.0", default-features = false  }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
#ark-snark = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = true, features = ["r1cs", "prf", "signature", "commitment", "crh", "encryption" ] }
ark-crypto-primitives-03 = { package = "ark-crypto-primitives", git = "https://github.com/ihyunnam/fork-ark-crypto-primitives-0.3.0.git", rev = "9c9f49c", default-features = false, features = ["r1cs"] }
#ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "prf", "signature", "commitment", "crh" ] }
ark-sponge = { version = "^0.4.0-alpha", default-features = false, features = ["r1cs"] }
#ark-snark = { version = "0.4.0", default-features = true }
ark-groth16 = { version = "0.4.0", default-features = true }
ark-spartan = { git = "https://github.com/arkworks-rs/spartan.git" }
merlin = "3.0.0"

# ADDED FOR MUSIG2 (AGGREGATABLE SCHNORR)
musig2 = { version = "0.0.11", default-features = true }
sha2 = { version = "0.10.8", default-features = false }
subtle = { version = "2.5.0", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = true }

# we use our fork of marlin crate, branch "use-constraint-system-directly"
ark-marlin = { git = "https://github.com/Entropy1729/marlin.git", branch = "use-constraint-system-directly" }
rand = { version = "0.8", default-features = false, features = ["std_rng", "getrandom"] }

# Important Note: the version of blake2 must be 0.9
blake2 = { version = "0.9" }
rand_chacha = { version = "0.3.1" }

anyhow = "1"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3" }
bitvec = "1"

derivative = { version = "2.0", features = ["use_core"] }
digest = "0.9"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }

[[example]]
name = "manual-constraints"

[[example]]
name = "test-circuit"

[[example]]
name = "merkle-tree"

[[example]]
name = "schnorr-signature"